package com.directi.training.lsp.exercise_refractored;

public class Duck implements Duckable
{
    public void quack()
    {
        System.out.println("Quack...");
    }

    public void swim()
    {
        System.out.println("Swim...");
    }
}
