@startuml

class Pool {
+ void run()
- void quack(Duck...)
- void swim(Duck...)
+ {static} void main(String[])
}
class Duck {
+ void quack()
+ void swim()
}
class ElectronicDuck {
- boolean _on
+ void quack()
+ void swim()
+ void turnOn()
+ void turnOff()
}


Duck <|-- ElectronicDuck
Pool ..> Duck : uses

@enduml